Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18818

Visible cursor is not painted when empty TextInput is aligned to the right

    XMLWordPrintable

Details

    Description

      import Qt 4.7
      
      Rectangle {
          width: 400; height: 300
          TextInput {
              cursorVisible: true
              horizontalAlignment: TextInput.AlignRight
              width: 200
              focus: true
              font.pixelSize: 20
              anchors.centerIn: parent
              Rectangle {
                  color: Qt.rgba(1.0, 0.0, 0.0, 0.3)
                  anchors.fill: parent
              }
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            jpetrell Joona Petrell
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes